@@ -1,5 +1,6 @@
 1.0.0
 -----
+ * RestoreSliceTask could be stuck due to missing exception handling (CASSANDRASC-105)
  * Make hash algorithm implementation pluggable (CASSANDRASC-114)
  * Fix ClosedChannelException when downloading from S3 (CASSANDRASC-112)
  * Fix NPE thrown when getting StorageClient from pool (CASSANDRASC-110)
